card spacing fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -510,12 +510,14 @@ body {
 }
 
 .card-boxes {
-  padding: 1rem 0;
+  padding: 1rem 0 !important;
 }
 
 .card-section {
   border-radius: 7px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.1);
+  margin: 0 5px !important;
+  border: 1px solid #efeff2;
 }
 
 .card-offer-part {
